// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricsService #start logs the metrics at every interval 1`] = `
Array [
  Array [
    "memory: 100.0B uptime: 0:25:00 load: [10.00 20.00 30.00] delay: 50.000",
  ],
]
`;

exports[`MetricsService #start logs the metrics at every interval 2`] = `
Array [
  Array [
    "memory: 100.0B uptime: 0:25:00 load: [10.00 20.00 30.00] delay: 50.000",
  ],
  Array [
    "memory: 200.0B uptime: 0:50:00 load: [20.00 30.00 40.00] delay: 100.000",
  ],
]
`;
